--- a/Application/Admin/View/Hall/send_notice.html
+++ b/Application/Admin/View/Hall/send_notice.html
@@ -93,7 +93,7 @@
 
                     <div class="col-sm-10">
                         <select class="form-control m-b" name="type">
-                            <option value="1">普通公告</option>
+                            <!--<option value="1">普通公告</option>-->
                             <option value="2">系统公告</option>
                             <option value="3">停服公告</option>
                         </select>
