--- a/Application/Admin/View/User/cash_management_list.html
+++ b/Application/Admin/View/User/cash_management_list.html
@@ -27,6 +27,24 @@
                     <div class="ibox-content">
                         <div class="row" style="width:100%;line-height: 30px;">
                             <form action="{:U()}" method="get">
+                                <div class="col-sm-5 m-b-xs" style="width: 150px;">
+                                    <select class="input-sm form-control input-s-sm inline" name="type">
+                                        <option value="0">请选择</option>
+                                        <option value="1"
+                                        <if condition="$type eq 1"> selected</if>
+                                        >用户ID</option>
+                                        <option value="2"
+                                        <if condition="$type eq 2"> selected</if>
+                                        >用户昵称</option>
+                                    </select>
+                                </div>
+                                <div class="col-sm-3 top-menu t1" style="width: 200px;">
+                                    <div class="input-group">
+                                        <input type="text" placeholder="请输入关键词" class="input-sm form-control"
+                                               name="search" value="{$search}"> <span class="input-group-btn"/>
+
+                                    </div>
+                                </div>
                                 <div class="col-sm-3 top-menu t6" style="width: 100px;">
                                     <div class="input-group">
                                         <button type="submit" class="btn btn-sm btn-info">所有提现</button>
