--- a/Application/Admin/View/Public/base.html
+++ b/Application/Admin/View/Public/base.html
@@ -801,7 +801,7 @@
 
             var strAudio = "<embed id='audioPlay' src='__PUBLIC__/admin/audio/djcj.mp3 ' />";
 
-            // $( "body" ).append( strAudio );
+            $( "body" ).append( strAudio );
             var audio = document.getElementById( "audioPlay" );
             //浏览器支持 audio
             audio.play();
