--- a/Application/Admin/View/User/game_win_list.html
+++ b/Application/Admin/View/User/game_win_list.html
@@ -44,7 +44,7 @@
                                     <div class="input-group">
                                         <input type="hidden" name="status"
                                                value="<?php echo $_GET['status']?$_GET['status']:0;?>">
-                                        <input type="text" placeholder="请输入ID或昵称或IP或唯一标识搜索" class="input-sm form-control"
+                                        <input type="text" placeholder="请输入ID搜索" class="input-sm form-control"
                                                name="search" style="width: 270px;" value="{$search}"> <span class="input-group-btn">
 
                                     </div>
@@ -73,7 +73,7 @@
                                 </div>
                                 <div class="col-sm-3 top-menu t6" style="width: 100px;">
                                     <div class="input-group">
-                                        <button type="submit" class="btn btn-sm btn-primary"> 搜索</button>
+                                        <button type="submit" class="btn btn-sm btn-primary">搜索</button>
                                         </span>
                                     </div>
                                 </div>
@@ -83,42 +83,26 @@
                             <table class="table table-bordered">
                                 <thead>
                                 <tr>
-                                    <th>游戏ID</th>
-                                    <th>昵称</th>
-                                    <th>性别</th>
-                                    <th>类型</th>
-                                    <th>登录时间</th>
-                                    <th>登录IP</th>
-                                    <th>设备唯一标识</th>
+                                    <th>用户ID</th>
+                                    <th>游戏房间</th>
+                                    <th>时间</th>
+                                    <th>实际盈亏</th>
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <volist name="list" id="_data">
+                                <volist name="_data" id="_data">
                                     <tr>
-                                        <td>
-                                            <a onclick="admin_edit('用户详情','{:U('user_info',array('userid'=>$_data['userid']))}','2','1200','800')"
-                                               style="text-decoration:none">
-                                                <font color="#1AB394">{$_data.userid}</font>
-                                            </a>
-                                        </td>
-                                        <td>
-                                            <a onclick="admin_edit('用户详情','{:U('user_info',array('userid'=>$_data['userid']))}','2','1200','800')"
-                                               style="text-decoration:none">
-                                                <font color="#1AB394">{$_data.username}</font>
-                                            </a>
-                                        </td>
-                                        <td>{$_data.sex_name}</td>
-                                        <td>{$login_type_name}</td>
-                                        <td>{$_data.time|date='Y-m-d H:i:s',###}</td>
-                                        <td>{$_data.ip}</td>
-                                        <td>{$_data.macaddr}</td>
+                                        <td>{$_data.userid}</td>
+                                        <td>{$_data.name}</td>
+                                        <td>{$_data.days}</td>
+                                        <td>{$_data.money}</td>
                                     </tr>
                                 </volist>
                                 </tbody>
                             </table>
                             </form>
                         </div>
-                        <div class="page">{$page}</div>
+                        <div class="page">{$_page}</div>
                     </div>
                 </div>
             </div>
