--- a/Application/Admin/View/Hall/piliang_send_message.html
+++ b/Application/Admin/View/Hall/piliang_send_message.html
@@ -64,6 +64,14 @@
                         <textarea id="ccomment" name="content" class="form-control" required="" aria-required="true"></textarea>
                     </div>
                 </div>
+
+                <div class="form-group">
+                    <label class="col-sm-3 control-label">推送用户：</label>
+                    <div class="col-sm-8">
+                        <textarea placeholder="请填写客户端ID,多人请用英文','分隔..." id="ccomments" name="clientidstr" class="form-control" required="" aria-required="true"></textarea>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <div class="col-sm-3">
                         <button class="btn btn-primary" type="submit">推送</button>
