--- a/Application/Admin/View/Hall/sendAppMessage.html
+++ b/Application/Admin/View/Hall/sendAppMessage.html
@@ -13,13 +13,13 @@
                                        style="text-decoration:none"> 推送群消息</a>
                                 </div>
                             </div>
-                            <div class="col-sm-3" style="width:100px;margin-left:0px;">
+                            <!--<div class="col-sm-3" style="width:100px;margin-left:0px;">
                                 <div class="input-group">
                                     <a href="javascript:;" class="btn btn-sm btn-success"
                                        onclick="admin_edit('推送批量消息','{:U('piliang_send_message')}','2','500','580')"
                                        style="text-decoration:none"> 批量推送消息</a>
                                 </div>
-                            </div>
+                            </div>-->
                             </form>
                         </div>
                         <div class="table-responsive">
