--- a/Application/Admin/View/Hall/send_message.html
+++ b/Application/Admin/View/Hall/send_message.html
@@ -52,12 +52,12 @@
     <div class="row" >
         <div class="ibox-content">
             <form class="form-horizontal m-t" id="commentForm" action="{:U()}" method="post" onsubmit="return ajax_post(this);">
-                <div class="form-group">
+                <!--<div class="form-group">
                     <label class="col-sm-3 control-label">推送标题：</label>
                     <div class="col-sm-8">
                         <input id="cname" name="title" minlength="2" type="text" class="form-control" required="" aria-required="true">
                     </div>
-                </div>
+                </div>-->
                 <div class="form-group">
                     <label class="col-sm-3 control-label">推送内容：</label>
                     <div class="col-sm-8">
