--- a/Application/Admin/View/Hall/sendAppMessage.html
+++ b/Application/Admin/View/Hall/sendAppMessage.html
@@ -26,7 +26,7 @@
                             <table class="table table-bordered">
                                 <thead>
                                 <tr>
-                                    <th>邮件标题</th>
+                                    <!--<th>邮件标题</th>-->
                                     <th>邮件内容</th>
                                     <th>类型</th>
                                     <th>发送时间</th>
@@ -35,7 +35,7 @@
                                 <tbody>
                                 <volist name="emailList" id="email">
                                     <tr>
-                                        <td>{$email.title}</td>
+                                        <!--<td>{$email.title}</td>-->
                                         <td>{$email.content}</td>
                                         <td><if condition="$email['type'] eq 1">群消息
                                             <else />批量消息
