--- a/Application/Admin/View/User/set_user_status.html
+++ b/Application/Admin/View/User/set_user_status.html
@@ -21,7 +21,22 @@
 
                 var that = $(the);
                 var url= $(the).attr('action');
-                var cs = $(the).serialize();
+                //statusValue; 1 超端 2 赢玩家 4 输玩家 8 封号
+                var statusValue = $("input[name='statusValue']:checked").val();
+                if(statusValue == 2){
+                    var realpeoplewinpercent = $("select[name='realpeoplewinpercent']").val();
+                    var ctrlPercent = realpeoplewinpercent;
+                }else if(statusValue == 4){
+                    var realpeoplefailpercent = $("select[name='realpeoplefailpercent']").val();
+                    var ctrlPercent = realpeoplefailpercent;
+                }else{
+                    var ctrlPercent = 0;
+                }
+                console.log(statusValue,ctrlPercent);
+                $(the).serialize();
+                // var cs = $(the).serialize();
+                var cs = $.param({'ctrlPercent':ctrlPercent})+'&'+$(the).serialize();
+                // console.log(cs);return false;
                  $.ajax({
                     url:url,
                     data:cs,
@@ -85,8 +100,28 @@
                                 <div class="col-sm-10"> 
                                     <!--<p>超端&emsp;&emsp;<input type="radio" name="statusValue" value="1" onclick="setNone(this)"></p>-->
                                     <p>赢玩家&emsp;<input type="radio" name="statusValue" value="2" onclick="setAmount()"></p>
-                                    <p id="setAmount" style="display: none;">赢钱上限&emsp;<input type="number" style="width:50px;" name="moneyLimit" value="0" step="1">&emsp;金币</p>
-                                    <p>输玩家&emsp;<input type="radio" name="statusValue" value="4" onclick="setNone(this)"></p>
+                                    <p id="setAmount" style="display: none;">赢钱上限（金币）：
+                                        <input type="number" style="width:50px;" name="moneyLimit" value="0" step="1">&emsp;玩家赢概率：
+                                        <select name="realpeoplewinpercent" id="realpeoplewinpercent">
+                                            <option value="0">0档</option>
+                                            <option value="200">正1档</option>
+                                            <option value="400">正2档</option>
+                                            <option value="600">正3档</option>
+                                            <option value="800">正4档</option>
+                                            <option value="1000">正5档</option>
+                                        </select>
+                                    </p>
+                                    <p>输玩家&emsp;<input type="radio" name="statusValue" value="4" onclick="setNones(this)"></p>
+                                    <p id="setNones" style="display: none;">玩家输概率：
+                                    <select name="realpeoplefailpercent" id="realpeoplefailpercent" >
+                                            <option value="0">0档</option>
+                                            <option value="200">正1档</option>
+                                            <option value="400">正2档</option>
+                                            <option value="600">正3档</option>
+                                            <option value="800">正4档</option>
+                                            <option value="1000">正5档</option>
+                                    </select>
+                                   </p>
                                     <p>封号&emsp;&emsp;<input type="radio" name="statusValue" value="8" onclick="selectDate()"></p>
                                     <p id="selectDate" style="display: none;">封号时长&emsp;<input type="number" style="width:50px;" name="otherValue" value="-1" step="0.001">&emsp;天</p>
                                 </div>
@@ -120,6 +155,7 @@
                     if(radio_ary[i].value == '1'){
                         document.getElementById('selectDate').style.display = 'block';
                         document.getElementById('setAmount').style.display = 'none';
+                        document.getElementById('setNones').style.display = 'none';
                     }
                 }
             }
@@ -133,19 +169,23 @@
                     if(radio_ary[i].value == '1'){
                         document.getElementById('setAmount').style.display = 'block';
                         document.getElementById('selectDate').style.display = 'none';
+                        document.getElementById('setNones').style.display = 'none';
                     }
                 }
             }
         }
 
 
-        function setNone(the)
+        function setNones(the)
         {
             if($(the).val() != 8 || $(the).val() == 2){
                 document.getElementById('selectDate').style.display = 'none';
             }
             if($(the).val() != 2 || $(the).val() == 8){
                 document.getElementById('setAmount').style.display = 'none';
+            }
+            if($(the).val() == 4){
+                document.getElementById('setNones').style.display = 'block';
             }
         }
     </script>
